--- a/Категория.html
+++ b/Категория.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Catalog</title>
+    <title>Ovens</title>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
@@ -22,7 +22,7 @@
               <div class="mm_close"></div>
               <ul class="nav">
                 <li><a href="Home.html">Home</a></li>
-                <li class="active"><a href="Catalog.html">Catalog</a><span class="arrow"><span></span></span>
+                <li><a href="Catalog.html">Catalog</a><span class="arrow"><span></span></span>
                   <ul class="sub-menu level2">
                     <li><a href="#">Embedded technology</a><span class="arrow"><span></span></span>
                       <ul class="sub-menu level3">
@@ -113,118 +113,223 @@
       <div class="container">
         <ul class="breadcrumb">
           <li class="breadcrumb-item"><a href="#">Home</a></li>
-          <li class="breadcrumb-item"><a href="#content">Catalog</a></li>
+          <li class="breadcrumb-item"><a href="#">Ctalog</a></li>
+          <li class="breadcrumb-item"><a href="#content">Ovens</a></li>
         </ul>
-        <div class="row catalog_list">
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
-            <div class="catalog_item">
-              <div class="c_body"><a href="#">
-                  <picture><img class="white" src="img/category/1.svg"/><img class="red" src="img/category/1_red.svg"/></picture></a><a class="cat_name" href="#"><span>Ovens</span></a></div>
-              <div class="c_footer">
-                <ul>
-                  <li><a href="#">Electric ovens</a></li>
-                  <li><a href="#">Gas ovens</a></li>
-                  <li><a href="#">Compact ovens with microwave</a></li>
-                </ul>
+        <h1 class="page_title">Ovens</h1>
+        <div class="row category_row">
+          <div class="col-12 col-sm-12 col-md-4 col-xl-3">
+            <div class="sidebar">
+              <div class="filters_group red">
+                <div class="filter_item">
+                  <div class="filter_head">Embedded technology</div>
+                  <div class="filter_body">
+                    <div class="filter_checkbox">
+                      <input type="checkbox" id="checkbox_11_1"/>
+                      <label for="checkbox_11_1">Cooker hoods</label>
+                    </div>
+                    <div class="filter_checkbox">
+                      <input type="checkbox" id="checkbox_11_2"/>
+                      <label for="checkbox_11_2">Cooker hoods</label>
+                    </div>
+                    <div class="filter_checkbox">
+                      <input type="checkbox" id="checkbox_11_3"/>
+                      <label for="checkbox_11_3">Cooker hoods</label>
+                    </div>
+                  </div>
+                </div>
+                <div class="filter_item">
+                  <div class="filter_head">Embedded technology</div>
+                  <div class="filter_body">
+                    <div class="filter_checkbox">
+                      <input type="checkbox" id="checkbox_12_1"/>
+                      <label for="checkbox_12_1">Cooker hoods</label>
+                    </div>
+                    <div class="filter_checkbox">
+                      <input type="checkbox" id="checkbox_12_2"/>
+                      <label for="checkbox_12_2">Cooker hoods</label>
+                    </div>
+                    <div class="filter_checkbox">
+                      <input type="checkbox" id="checkbox_12_3"/>
+                      <label for="checkbox_12_3">Cooker hoods</label>
+                    </div>
+                  </div>
+                </div>
+                <div class="filter_item">
+                  <div class="filter_head">Embedded technology</div>
+                  <div class="filter_body">
+                    <div class="filter_checkbox">
+                      <input type="checkbox" id="checkbox_13_1"/>
+                      <label for="checkbox_13_1">Cooker hoods</label>
+                    </div>
+                    <div class="filter_checkbox">
+                      <input type="checkbox" id="checkbox_13_2"/>
+                      <label for="checkbox_13_2">Cooker hoods</label>
+                    </div>
+                    <div class="filter_checkbox">
+                      <input type="checkbox" id="checkbox_13_3"/>
+                      <label for="checkbox_13_3">Cooker hoods</label>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="filters_group blue">
+                <div class="filter_item">
+                  <div class="filter_head">Design line</div>
+                  <div class="filter_body">
+                    <div class="filter_checkbox">
+                      <input type="checkbox" id="checkbox_21_1"/>
+                      <label for="checkbox_21_1">Electric</label>
+                    </div>
+                    <div class="filter_checkbox">
+                      <input type="checkbox" id="checkbox_21_2"/>
+                      <label for="checkbox_21_2">Electric</label>
+                    </div>
+                  </div>
+                </div>
+                <div class="filter_item">
+                  <div class="filter_head">Design line</div>
+                  <div class="filter_body">
+                    <div class="filter_checkbox">
+                      <input type="checkbox" id="checkbox_22_1"/>
+                      <label for="checkbox_22_1">Electric</label>
+                    </div>
+                    <div class="filter_checkbox">
+                      <input type="checkbox" id="checkbox_22_2"/>
+                      <label for="checkbox_22_2">Electric</label>
+                    </div>
+                  </div>
+                </div>
+                <div class="filter_item">
+                  <div class="filter_head">Design line</div>
+                  <div class="filter_body">
+                    <div class="filter_checkbox">
+                      <input type="checkbox" id="checkbox_23_1"/>
+                      <label for="checkbox_23_1">Electric</label>
+                    </div>
+                    <div class="filter_checkbox">
+                      <input type="checkbox" id="checkbox_23_2"/>
+                      <label for="checkbox_23_2">Electric</label>
+                    </div>
+                  </div>
+                </div>
+                <div class="filter_item">
+                  <div class="filter_head">Design line</div>
+                  <div class="filter_body">
+                    <div class="filter_checkbox">
+                      <input type="checkbox" id="checkbox_24_1"/>
+                      <label for="checkbox_24_1">Electric</label>
+                    </div>
+                    <div class="filter_checkbox">
+                      <input type="checkbox" id="checkbox_24_2"/>
+                      <label for="checkbox_24_2">Electric</label>
+                    </div>
+                  </div>
+                </div>
+                <div class="filter_item">
+                  <div class="filter_head">Design line</div>
+                  <div class="filter_body">
+                    <div class="filter_checkbox">
+                      <input type="checkbox" id="checkbox_25_1"/>
+                      <label for="checkbox_25_1">Electric</label>
+                    </div>
+                    <div class="filter_checkbox">
+                      <input type="checkbox" id="checkbox_25_2"/>
+                      <label for="checkbox_25_2">Electric</label>
+                    </div>
+                  </div>
+                </div>
+                <div class="filter_item">
+                  <div class="filter_head">Design line</div>
+                  <div class="filter_body">
+                    <div class="filter_checkbox">
+                      <input type="checkbox" id="checkbox_26_1"/>
+                      <label for="checkbox_26_1">Electric</label>
+                    </div>
+                    <div class="filter_checkbox">
+                      <input type="checkbox" id="checkbox_26_2"/>
+                      <label for="checkbox_26_2">Electric</label>
+                    </div>
+                  </div>
+                </div>
+                <div class="filter_item">
+                  <div class="filter_head">Design line</div>
+                  <div class="filter_body">
+                    <div class="filter_checkbox">
+                      <input type="checkbox" id="checkbox_27_1"/>
+                      <label for="checkbox_27_1">Electric</label>
+                    </div>
+                    <div class="filter_checkbox">
+                      <input type="checkbox" id="checkbox_27_2"/>
+                      <label for="checkbox_27_2">Electric</label>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
-            <div class="catalog_item">
-              <div class="c_body"><a href="#">
-                  <picture><img class="white" src="img/category/2.svg"/><img class="red" src="img/category/2_red.svg"/></picture></a><a class="cat_name" href="#"><span>Freezers</span></a></div>
-              <div class="c_footer">
-                <ul>
-                  <li><a href="#">Electric ovens</a></li>
-                  <li><a href="#">Gas ovens</a></li>
-                  <li><a href="#">Compact ovens with microwave</a></li>
-                </ul>
-              </div>
+          <div class="col-12 col-sm-12 col-md-8 col-xl-9">
+            <div class="row category_list">
+              <div class="col-12 col-sm-6 col-md-6 col-xl-4"><a class="category_item" href="#">
+                  <picture><img src="img/image_1.png"/></picture>
+                  <div class="c_title">MAUNFELD CEOK.656B</div>
+                  <div class="c_desc">Electric ovens, Wideness: 600 mm, Capacity: 65 litres, Grill</div></a></div>
+              <div class="col-12 col-sm-6 col-md-6 col-xl-4"><a class="category_item" href="#">
+                  <picture><img src="img/image_1.png"/></picture>
+                  <div class="c_title">MAUNFELD CEOK.656B</div>
+                  <div class="c_desc">Electric ovens, Wideness: 600 mm, Capacity: 65 litres, Grill</div></a></div>
+              <div class="col-12 col-sm-6 col-md-6 col-xl-4"><a class="category_item" href="#">
+                  <picture><img src="img/image_1.png"/></picture>
+                  <div class="c_title">MAUNFELD CEOK.656B</div>
+                  <div class="c_desc">Electric ovens, Wideness: 600 mm, Capacity: 65 litres, Grill</div></a></div>
+              <div class="col-12 col-sm-6 col-md-6 col-xl-4"><a class="category_item" href="#">
+                  <picture><img src="img/image_1.png"/></picture>
+                  <div class="c_title">MAUNFELD CEOK.656B</div>
+                  <div class="c_desc">Electric ovens, Wideness: 600 mm, Capacity: 65 litres, Grill</div></a></div>
+              <div class="col-12 col-sm-6 col-md-6 col-xl-4"><a class="category_item" href="#">
+                  <picture><img src="img/image_1.png"/></picture>
+                  <div class="c_title">MAUNFELD CEOK.656B</div>
+                  <div class="c_desc">Electric ovens, Wideness: 600 mm, Capacity: 65 litres, Grill</div></a></div>
+              <div class="col-12 col-sm-6 col-md-6 col-xl-4"><a class="category_item" href="#">
+                  <picture><img src="img/image_1.png"/></picture>
+                  <div class="c_title">MAUNFELD CEOK.656B</div>
+                  <div class="c_desc">Electric ovens, Wideness: 600 mm, Capacity: 65 litres, Grill</div></a></div>
+              <div class="col-12 col-sm-6 col-md-6 col-xl-4"><a class="category_item" href="#">
+                  <picture><img src="img/image_1.png"/></picture>
+                  <div class="c_title">MAUNFELD CEOK.656B</div>
+                  <div class="c_desc">Electric ovens, Wideness: 600 mm, Capacity: 65 litres, Grill</div></a></div>
+              <div class="col-12 col-sm-6 col-md-6 col-xl-4"><a class="category_item" href="#">
+                  <picture><img src="img/image_1.png"/></picture>
+                  <div class="c_title">MAUNFELD CEOK.656B</div>
+                  <div class="c_desc">Electric ovens, Wideness: 600 mm, Capacity: 65 litres, Grill</div></a></div>
+              <div class="col-12 col-sm-6 col-md-6 col-xl-4"><a class="category_item" href="#">
+                  <picture><img src="img/image_1.png"/></picture>
+                  <div class="c_title">MAUNFELD CEOK.656B</div>
+                  <div class="c_desc">Electric ovens, Wideness: 600 mm, Capacity: 65 litres, Grill</div></a></div>
+              <div class="col-12 col-sm-6 col-md-6 col-xl-4"><a class="category_item" href="#">
+                  <picture><img src="img/image_1.png"/></picture>
+                  <div class="c_title">MAUNFELD CEOK.656B</div>
+                  <div class="c_desc">Electric ovens, Wideness: 600 mm, Capacity: 65 litres, Grill</div></a></div>
+              <div class="col-12 col-sm-6 col-md-6 col-xl-4"><a class="category_item" href="#">
+                  <picture><img src="img/image_1.png"/></picture>
+                  <div class="c_title">MAUNFELD CEOK.656B</div>
+                  <div class="c_desc">Electric ovens, Wideness: 600 mm, Capacity: 65 litres, Grill</div></a></div>
+              <div class="col-12 col-sm-6 col-md-6 col-xl-4"><a class="category_item" href="#">
+                  <picture><img src="img/image_1.png"/></picture>
+                  <div class="c_title">MAUNFELD CEOK.656B</div>
+                  <div class="c_desc">Electric ovens, Wideness: 600 mm, Capacity: 65 litres, Grill</div></a></div>
+            </div>
+            <div class="pagination_block">
+              <ul class="pagination_nav">
+                <li><a class="arrow prev_page" href="#"></a></li>
+                <li><a href="#">1</a></li>
+                <li><a class="empty" href="#">...</a></li>
+                <li><a class="active" href="#">6</a></li>
+                <li><a href="#">7</a></li>
+                <li><a class="arrow next_page" href="#"></a></li>
+              </ul>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
-            <div class="catalog_item">
-              <div class="c_body"><a href="#">
-                  <picture><img class="white" src="img/category/3.svg"/><img class="red" src="img/category/3_red.svg"/></picture></a><a class="cat_name" href="#"><span>Washing machines</span></a></div>
-              <div class="c_footer">
-                <ul>
-                  <li><a href="#">Electric ovens</a></li>
-                  <li><a href="#">Gas ovens</a></li>
-                  <li><a href="#">Compact ovens with microwave</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
-            <div class="catalog_item">
-              <div class="c_body"><a href="#">
-                  <picture><img class="white" src="img/category/4.svg"/><img class="red" src="img/category/4_red.svg"/></picture></a><a class="cat_name" href="#"><span>Microwaves</span></a></div>
-              <div class="c_footer">
-                <ul>
-                  <li><a href="#">Electric ovens</a></li>
-                  <li><a href="#">Gas ovens</a></li>
-                  <li><a href="#">Compact ovens with microwave</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
-            <div class="catalog_item">
-              <div class="c_body"><a href="#">
-                  <picture><img class="white" src="img/category/5.svg"/><img class="red" src="img/category/5_red.svg"/></picture></a><a class="cat_name" href="#"><span>Dishwashers</span></a></div>
-              <div class="c_footer">
-                <ul>
-                  <li><a href="#">Electric ovens</a></li>
-                  <li><a href="#">Gas ovens</a></li>
-                  <li><a href="#">Compact ovens with microwave</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
-            <div class="catalog_item">
-              <div class="c_body"><a href="#">
-                  <picture><img class="white" src="img/category/6.svg"/><img class="red" src="img/category/6_red.svg"/></picture></a><a class="cat_name" href="#"><span>Cooker hoods</span></a></div>
-              <div class="c_footer">
-                <ul>
-                  <li><a href="#">Electric ovens</a></li>
-                  <li><a href="#">Gas ovens</a></li>
-                  <li><a href="#">Compact ovens with microwave</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
-            <div class="catalog_item">
-              <div class="c_body"><a href="#">
-                  <picture><img class="white" src="img/category/7.svg"/><img class="red" src="img/category/7_red.svg"/></picture></a><a class="cat_name" href="#"><span>Microwaves</span></a></div>
-              <div class="c_footer">
-                <ul>
-                  <li><a href="#">Electric ovens</a></li>
-                  <li><a href="#">Gas ovens</a></li>
-                  <li><a href="#">Compact ovens with microwave</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
-            <div class="catalog_item">
-              <div class="c_body"><a href="#">
-                  <picture><img class="white" src="img/category/8.svg"/><img class="red" src="img/category/8_red.svg"/></picture></a><a class="cat_name" href="#"><span>Ovens</span></a></div>
-              <div class="c_footer">
-                <ul>
-                  <li><a href="#">Electric ovens</a></li>
-                  <li><a href="#">Gas ovens</a></li>
-                  <li><a href="#">Compact ovens with microwave</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="content catalog_desc">
-          <p>Nec pharetra leo fusce urna ligula magna lectus quisque, proin porta justo rutrum, nulla, sed rutrum commodo — adipiscing ligula. Proin, non molestie gravida duis arcu vulputate — nulla ligula vitae. Odio amet odio eu tempus et vivamus bibendum congue, sodales.</p>
-          <p>Vivamus sed arcu enim auctor nulla odio nam quam vulputate curabitur mattis risus leo curabitur fusce nulla sem pellentesque sem rutrum quam donec. Vitae urna vitae: et donec vitae nam integer proin — in vitae justo ornare mattis et. Non justo vulputate morbi bibendum, in eget tellus donec commodo enim integer curabitur sodales ut vitae nam bibendum maecenas ornare rutrum nam. At molestie vivamus magna tellus sit cursus tempus vulputate arcu nec, donec non congue.</p>
-          <p>Commodo sed ipsum fusce commodo amet mattis, congue pharetra duis sem massa metus quisque sodales adipiscing, porta nulla pharetra amet. Fusce at nam odio nibh orci ornare rutrum curabitur quam at risus rutrum magna pharetra duis eget sed sagittis, proin sagittis sit, amet: commodo.</p>
         </div>
       </div>
     </section>
