--- a/О компании.html
+++ b/О компании.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Catalog</title>
+    <title>About</title>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
@@ -22,7 +22,7 @@
               <div class="mm_close"></div>
               <ul class="nav">
                 <li><a href="Home.html">Home</a></li>
-                <li class="active"><a href="Catalog.html">Catalog</a><span class="arrow"><span></span></span>
+                <li><a href="Catalog.html">Catalog</a><span class="arrow"><span></span></span>
                   <ul class="sub-menu level2">
                     <li><a href="#">Embedded technology</a><span class="arrow"><span></span></span>
                       <ul class="sub-menu level3">
@@ -54,7 +54,7 @@
                     </li>
                   </ul>
                 </li>
-                <li><a href="About.html">About</a></li>
+                <li class="active"><a href="About.html">About</a></li>
                 <li><a href="Contacts.html">Contacts</a></li>
               </ul>
             </div>
@@ -95,17 +95,12 @@
         </div>
       </div>
     </header>
-    <div class="page_banner" style="background-image:url(img/banner2.png)">
+    <div class="page_banner" style="background-image:url(img/banner3.png)">
       <div class="container">
-        <div class="catalog_banner_desc">
-          <div class="title">Hurry up!</div>
-          <div class="sub_title">Only until the end of March 2019 discounts on all ovens!</div>
-          <div class="row">
-            <div class="col-7 col-sm-6 col-md-6 col-xl-5 ai_center"><a class="btn_default btn_white2" href="#">See More</a></div>
-            <div class="col-5 col-sm-6 col-md-6 col-xl-7">
-              <div class="sale">-50%</div>
-            </div>
-          </div>
+        <div class="about_banner_desc">
+          <div class="title">History Brand MAUNFELD</div>
+          <div class="desc">The brand MAUNFELD dates back to 1998, since the registration of the trademark in the UK. Considering its main priority to maintain high quality standards, the company approaches the location..</div>
+          <div class="text-right"><a class="btn_default btn_blue" href="#">Read more</a></div>
         </div>
       </div>
     </div>
@@ -113,120 +108,69 @@
       <div class="container">
         <ul class="breadcrumb">
           <li class="breadcrumb-item"><a href="#">Home</a></li>
-          <li class="breadcrumb-item"><a href="#content">Catalog</a></li>
+          <li class="breadcrumb-item"><a href="#content">About</a></li>
         </ul>
-        <div class="row catalog_list">
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
-            <div class="catalog_item">
-              <div class="c_body"><a href="#">
-                  <picture><img class="white" src="img/category/1.svg"/><img class="red" src="img/category/1_red.svg"/></picture></a><a class="cat_name" href="#"><span>Ovens</span></a></div>
-              <div class="c_footer">
-                <ul>
-                  <li><a href="#">Electric ovens</a></li>
-                  <li><a href="#">Gas ovens</a></li>
-                  <li><a href="#">Compact ovens with microwave</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
-            <div class="catalog_item">
-              <div class="c_body"><a href="#">
-                  <picture><img class="white" src="img/category/2.svg"/><img class="red" src="img/category/2_red.svg"/></picture></a><a class="cat_name" href="#"><span>Freezers</span></a></div>
-              <div class="c_footer">
-                <ul>
-                  <li><a href="#">Electric ovens</a></li>
-                  <li><a href="#">Gas ovens</a></li>
-                  <li><a href="#">Compact ovens with microwave</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
-            <div class="catalog_item">
-              <div class="c_body"><a href="#">
-                  <picture><img class="white" src="img/category/3.svg"/><img class="red" src="img/category/3_red.svg"/></picture></a><a class="cat_name" href="#"><span>Washing machines</span></a></div>
-              <div class="c_footer">
-                <ul>
-                  <li><a href="#">Electric ovens</a></li>
-                  <li><a href="#">Gas ovens</a></li>
-                  <li><a href="#">Compact ovens with microwave</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
-            <div class="catalog_item">
-              <div class="c_body"><a href="#">
-                  <picture><img class="white" src="img/category/4.svg"/><img class="red" src="img/category/4_red.svg"/></picture></a><a class="cat_name" href="#"><span>Microwaves</span></a></div>
-              <div class="c_footer">
-                <ul>
-                  <li><a href="#">Electric ovens</a></li>
-                  <li><a href="#">Gas ovens</a></li>
-                  <li><a href="#">Compact ovens with microwave</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
-            <div class="catalog_item">
-              <div class="c_body"><a href="#">
-                  <picture><img class="white" src="img/category/5.svg"/><img class="red" src="img/category/5_red.svg"/></picture></a><a class="cat_name" href="#"><span>Dishwashers</span></a></div>
-              <div class="c_footer">
-                <ul>
-                  <li><a href="#">Electric ovens</a></li>
-                  <li><a href="#">Gas ovens</a></li>
-                  <li><a href="#">Compact ovens with microwave</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
-            <div class="catalog_item">
-              <div class="c_body"><a href="#">
-                  <picture><img class="white" src="img/category/6.svg"/><img class="red" src="img/category/6_red.svg"/></picture></a><a class="cat_name" href="#"><span>Cooker hoods</span></a></div>
-              <div class="c_footer">
-                <ul>
-                  <li><a href="#">Electric ovens</a></li>
-                  <li><a href="#">Gas ovens</a></li>
-                  <li><a href="#">Compact ovens with microwave</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
-            <div class="catalog_item">
-              <div class="c_body"><a href="#">
-                  <picture><img class="white" src="img/category/7.svg"/><img class="red" src="img/category/7_red.svg"/></picture></a><a class="cat_name" href="#"><span>Microwaves</span></a></div>
-              <div class="c_footer">
-                <ul>
-                  <li><a href="#">Electric ovens</a></li>
-                  <li><a href="#">Gas ovens</a></li>
-                  <li><a href="#">Compact ovens with microwave</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
-            <div class="catalog_item">
-              <div class="c_body"><a href="#">
-                  <picture><img class="white" src="img/category/8.svg"/><img class="red" src="img/category/8_red.svg"/></picture></a><a class="cat_name" href="#"><span>Ovens</span></a></div>
-              <div class="c_footer">
-                <ul>
-                  <li><a href="#">Electric ovens</a></li>
-                  <li><a href="#">Gas ovens</a></li>
-                  <li><a href="#">Compact ovens with microwave</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="content catalog_desc">
+        <h1 class="page_title">About company</h1>
+        <div class="content">
           <p>Nec pharetra leo fusce urna ligula magna lectus quisque, proin porta justo rutrum, nulla, sed rutrum commodo — adipiscing ligula. Proin, non molestie gravida duis arcu vulputate — nulla ligula vitae. Odio amet odio eu tempus et vivamus bibendum congue, sodales.</p>
           <p>Vivamus sed arcu enim auctor nulla odio nam quam vulputate curabitur mattis risus leo curabitur fusce nulla sem pellentesque sem rutrum quam donec. Vitae urna vitae: et donec vitae nam integer proin — in vitae justo ornare mattis et. Non justo vulputate morbi bibendum, in eget tellus donec commodo enim integer curabitur sodales ut vitae nam bibendum maecenas ornare rutrum nam. At molestie vivamus magna tellus sit cursus tempus vulputate arcu nec, donec non congue.</p>
           <p>Commodo sed ipsum fusce commodo amet mattis, congue pharetra duis sem massa metus quisque sodales adipiscing, porta nulla pharetra amet. Fusce at nam odio nibh orci ornare rutrum curabitur quam at risus rutrum magna pharetra duis eget sed sagittis, proin sagittis sit, amet: commodo.</p>
+          <div class="row">
+            <div class="col-12 col-sm-12 col-md-4 col-xl-4 pt-4"><img src="img/image.svg"/></div>
+            <div class="col-12 col-sm-12 col-md-8 col-xl-8">
+              <p>Nec pharetra leo fusce urna ligula magna lectus quisque, proin porta justo rutrum, nulla, sed rutrum commodo — adipiscing ligula. Proin, non molestie gravida duis arcu vulputate — nulla ligula vitae. Odio amet odio eu tempus et vivamus bibendum congue, sodales.</p>
+              <p>Vivamus sed arcu enim auctor nulla odio nam quam vulputate curabitur mattis risus leo curabitur fusce nulla sem pellentesque sem rutrum quam donec. Vitae urna vitae: et donec vitae nam integer proin — in vitae justo ornare mattis et. Non justo vulputate morbi bibendum, in eget tellus donec commodo enim integer curabitur sodales ut vitae nam bibendum maecenas ornare rutrum nam. At molestie vivamus magna tellus sit cursus tempus vulputate arcu nec, donec non congue.</p>
+              <p>Commodo sed ipsum fusce commodo amet mattis, congue pharetra duis sem massa metus quisque sodales adipiscing, porta nulla pharetra amet. Fusce at nam odio nibh orci ornare rutrum curabitur quam at risus rutrum magna pharetra duis eget sed sagittis, proin sagittis sit, amet: commodo.</p>
+            </div>
+          </div>
+          <p>Nec pharetra leo fusce urna ligula magna lectus quisque, proin porta justo rutrum, nulla, sed rutrum commodo — adipiscing ligula. Proin, non molestie gravida duis arcu vulputate — nulla ligula vitae. Odio amet odio eu tempus et vivamus bibendum congue.</p>
+          <div class="row">
+            <div class="col-12 col-sm-12 col-md-5 col-xl-4">
+              <p>Nec pharetra leo fusce urna ligula magna lectus quisque, proin porta justo rutrum, nulla, sed rutrum commodo — adipiscing ligula. Proin, non molestie gravida duis arcu vulputate — nulla ligula vitae. Odio amet odio eu tempus et vivamus bibendum congue, sodales.</p>
+              <p>Vivamus sed arcu enim auctor nulla odio nam quam vulputate curabitur mattis risus leo curabitur fusce nulla sem pellentesque sem rutrum quam donec. Vitae urna vitae: et donec vitae nam integer proin — in vitae justo ornare mattis et. Non justo vulputate morbi bibendum, in eget tellus donec.</p>
+            </div>
+            <div class="col-12 col-sm-12 col-md-7 col-xl-8"><iframe width="100%" height="435" src="https://www.youtube.com/embed/kHbgoT4Kj3c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+          </div>
         </div>
       </div>
+    </section>
+    <section class="preimuschstva">
+      <div class="container">
+        <h2 class="section_title">Advantages company</h2>
+        <div class="pr_list">
+          <div class="pr_item">
+            <picture><img src="img/pr_1.svg"/></picture>
+            <div class="text">Best price guaranteed</div>
+          </div>
+          <div class="pr_item">
+            <picture><img src="img/pr_2.svg"/></picture>
+            <div class="text">3 year warranty</div>
+          </div>
+          <div class="pr_item">
+            <picture><img src="img/pr_3.svg"/></picture>
+            <div class="text">Own delivery service</div>
+          </div>
+          <div class="pr_item">
+            <picture><img src="img/pr_4.svg"/></picture>
+            <div class="text">Payment by instalments</div>
+          </div>
+          <div class="pr_item">
+            <picture><img src="img/pr_5.svg"/></picture>
+            <div class="text">Discounts and promotions</div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="about_map">
+      <div class="container">
+        <div class="map_baloon">
+          <ul>
+            <li>Our stores are located throughout Europe.</li>
+            <li>We have the most extensive shopping delivery network.</li>
+            <li>And the largest network of call centers.</li>
+          </ul>
+        </div>
+      </div><img src="img/map.svg"/>
     </section>
     <footer>
       <div class="container">
