--- a/Новости.html
+++ b/Новости.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Catalog</title>
+    <title>News</title>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
@@ -22,7 +22,7 @@
               <div class="mm_close"></div>
               <ul class="nav">
                 <li><a href="Home.html">Home</a></li>
-                <li class="active"><a href="Catalog.html">Catalog</a><span class="arrow"><span></span></span>
+                <li><a href="Catalog.html">Catalog</a><span class="arrow"><span></span></span>
                   <ul class="sub-menu level2">
                     <li><a href="#">Embedded technology</a><span class="arrow"><span></span></span>
                       <ul class="sub-menu level3">
@@ -95,137 +95,84 @@
         </div>
       </div>
     </header>
-    <div class="page_banner" style="background-image:url(img/banner2.png)">
-      <div class="container">
-        <div class="catalog_banner_desc">
-          <div class="title">Hurry up!</div>
-          <div class="sub_title">Only until the end of March 2019 discounts on all ovens!</div>
-          <div class="row">
-            <div class="col-7 col-sm-6 col-md-6 col-xl-5 ai_center"><a class="btn_default btn_white2" href="#">See More</a></div>
-            <div class="col-5 col-sm-6 col-md-6 col-xl-7">
-              <div class="sale">-50%</div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
     <section class="page_content">
       <div class="container">
         <ul class="breadcrumb">
           <li class="breadcrumb-item"><a href="#">Home</a></li>
-          <li class="breadcrumb-item"><a href="#content">Catalog</a></li>
+          <li class="breadcrumb-item"><a href="#content">News</a></li>
         </ul>
-        <div class="row catalog_list">
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
-            <div class="catalog_item">
-              <div class="c_body"><a href="#">
-                  <picture><img class="white" src="img/category/1.svg"/><img class="red" src="img/category/1_red.svg"/></picture></a><a class="cat_name" href="#"><span>Ovens</span></a></div>
-              <div class="c_footer">
-                <ul>
-                  <li><a href="#">Electric ovens</a></li>
-                  <li><a href="#">Gas ovens</a></li>
-                  <li><a href="#">Compact ovens with microwave</a></li>
-                </ul>
+        <h1 class="page_title">News</h1>
+        <div class="news_grid">
+          <div class="grid-item">
+            <div class="news_item"><a class="btn_default btn_red" href="#">Read more</a>
+              <picture><img src="img/news/1.png"/></picture>
+              <div class="news_body">
+                <div class="news_title">But I must explain to you how all this mistaken idea.</div>
+                <div class="date">Jan, 8 / 2019</div>
+                <div class="desc">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Donec facilisis tortor ut augue lacinia, at viverra est semper. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue..</div>
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
-            <div class="catalog_item">
-              <div class="c_body"><a href="#">
-                  <picture><img class="white" src="img/category/2.svg"/><img class="red" src="img/category/2_red.svg"/></picture></a><a class="cat_name" href="#"><span>Freezers</span></a></div>
-              <div class="c_footer">
-                <ul>
-                  <li><a href="#">Electric ovens</a></li>
-                  <li><a href="#">Gas ovens</a></li>
-                  <li><a href="#">Compact ovens with microwave</a></li>
-                </ul>
+          <div class="grid-item">
+            <div class="news_item"><a class="btn_default btn_red" href="#">Read more</a>
+              <picture><img src="img/news/2.png"/></picture>
+              <div class="news_body">
+                <div class="news_title">But I must explain to you how all this mistaken idea.</div>
+                <div class="date">Jan, 8 / 2019</div>
+                <div class="desc">Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Donec facilisis tortor ut augue lacinia, at viverra est semper. Sed sapien metus, scelerisque nec pharetra id, tempor..</div>
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
-            <div class="catalog_item">
-              <div class="c_body"><a href="#">
-                  <picture><img class="white" src="img/category/3.svg"/><img class="red" src="img/category/3_red.svg"/></picture></a><a class="cat_name" href="#"><span>Washing machines</span></a></div>
-              <div class="c_footer">
-                <ul>
-                  <li><a href="#">Electric ovens</a></li>
-                  <li><a href="#">Gas ovens</a></li>
-                  <li><a href="#">Compact ovens with microwave</a></li>
-                </ul>
+          <div class="grid-item grid-item--width2">
+            <div class="news_item"><a class="btn_default btn_red" href="#">Read more</a>
+              <picture><img src="img/news/3.png"/></picture>
+              <div class="news_body">
+                <div class="news_title">But I must explain to you how all this mistaken idea.</div>
+                <div class="date">Jan, 8 / 2019</div>
+                <div class="desc">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo..</div>
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
-            <div class="catalog_item">
-              <div class="c_body"><a href="#">
-                  <picture><img class="white" src="img/category/4.svg"/><img class="red" src="img/category/4_red.svg"/></picture></a><a class="cat_name" href="#"><span>Microwaves</span></a></div>
-              <div class="c_footer">
-                <ul>
-                  <li><a href="#">Electric ovens</a></li>
-                  <li><a href="#">Gas ovens</a></li>
-                  <li><a href="#">Compact ovens with microwave</a></li>
-                </ul>
+          <div class="grid-item grid-item--width2">
+            <div class="news_item"><a class="btn_default btn_red" href="#">Read more</a>
+              <picture><img src="img/news/4.png"/></picture>
+              <div class="news_body">
+                <div class="news_title">But I must explain to you how all this mistaken idea.</div>
+                <div class="date">Jan, 8 / 2019</div>
+                <div class="desc">Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore..</div>
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
-            <div class="catalog_item">
-              <div class="c_body"><a href="#">
-                  <picture><img class="white" src="img/category/5.svg"/><img class="red" src="img/category/5_red.svg"/></picture></a><a class="cat_name" href="#"><span>Dishwashers</span></a></div>
-              <div class="c_footer">
-                <ul>
-                  <li><a href="#">Electric ovens</a></li>
-                  <li><a href="#">Gas ovens</a></li>
-                  <li><a href="#">Compact ovens with microwave</a></li>
-                </ul>
+          <div class="grid-item">
+            <div class="news_item"><a class="btn_default btn_red" href="#">Read more</a>
+              <div class="news_body">
+                <div class="news_title">But I must explain to you how all this mistaken idea.</div>
+                <div class="date">Jan, 8 / 2019</div>
+                <div class="desc">Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.</div>
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
-            <div class="catalog_item">
-              <div class="c_body"><a href="#">
-                  <picture><img class="white" src="img/category/6.svg"/><img class="red" src="img/category/6_red.svg"/></picture></a><a class="cat_name" href="#"><span>Cooker hoods</span></a></div>
-              <div class="c_footer">
-                <ul>
-                  <li><a href="#">Electric ovens</a></li>
-                  <li><a href="#">Gas ovens</a></li>
-                  <li><a href="#">Compact ovens with microwave</a></li>
-                </ul>
+          <div class="grid-item">
+            <div class="news_item"><a class="btn_default btn_red" href="#">Read more</a>
+              <div class="news_body">
+                <div class="news_title">But I must explain to you how all this mistaken idea.</div>
+                <div class="date">Jan, 8 / 2019</div>
+                <div class="desc">sed quia non numquam eius modi tempora incidunt ut labore et dolore..','Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.</div>
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
-            <div class="catalog_item">
-              <div class="c_body"><a href="#">
-                  <picture><img class="white" src="img/category/7.svg"/><img class="red" src="img/category/7_red.svg"/></picture></a><a class="cat_name" href="#"><span>Microwaves</span></a></div>
-              <div class="c_footer">
-                <ul>
-                  <li><a href="#">Electric ovens</a></li>
-                  <li><a href="#">Gas ovens</a></li>
-                  <li><a href="#">Compact ovens with microwave</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4 col-xl-3">
-            <div class="catalog_item">
-              <div class="c_body"><a href="#">
-                  <picture><img class="white" src="img/category/8.svg"/><img class="red" src="img/category/8_red.svg"/></picture></a><a class="cat_name" href="#"><span>Ovens</span></a></div>
-              <div class="c_footer">
-                <ul>
-                  <li><a href="#">Electric ovens</a></li>
-                  <li><a href="#">Gas ovens</a></li>
-                  <li><a href="#">Compact ovens with microwave</a></li>
-                </ul>
+          <div class="grid-item">
+            <div class="news_item"><a class="btn_default btn_red" href="#">Read more</a>
+              <picture><img src="img/news/7.png"/></picture>
+              <div class="news_body">
+                <div class="news_title">But I must explain to you how all this mistaken idea.</div>
+                <div class="date">Jan, 8 / 2019</div>
+                <div class="desc">sed quia non numquam eius modi tempora incidunt ut labore et dolore..','Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.</div>
               </div>
             </div>
           </div>
         </div>
-        <div class="content catalog_desc">
-          <p>Nec pharetra leo fusce urna ligula magna lectus quisque, proin porta justo rutrum, nulla, sed rutrum commodo — adipiscing ligula. Proin, non molestie gravida duis arcu vulputate — nulla ligula vitae. Odio amet odio eu tempus et vivamus bibendum congue, sodales.</p>
-          <p>Vivamus sed arcu enim auctor nulla odio nam quam vulputate curabitur mattis risus leo curabitur fusce nulla sem pellentesque sem rutrum quam donec. Vitae urna vitae: et donec vitae nam integer proin — in vitae justo ornare mattis et. Non justo vulputate morbi bibendum, in eget tellus donec commodo enim integer curabitur sodales ut vitae nam bibendum maecenas ornare rutrum nam. At molestie vivamus magna tellus sit cursus tempus vulputate arcu nec, donec non congue.</p>
-          <p>Commodo sed ipsum fusce commodo amet mattis, congue pharetra duis sem massa metus quisque sodales adipiscing, porta nulla pharetra amet. Fusce at nam odio nibh orci ornare rutrum curabitur quam at risus rutrum magna pharetra duis eget sed sagittis, proin sagittis sit, amet: commodo.</p>
-        </div>
+        <div class="text-center mt-4"><a class="btn_default btn_white" href="#">See More</a></div>
       </div>
     </section>
     <footer>
